# zkrow

./: .gitmodules  README.md  memo.md  zkpass.json
bonsai/apps/: Cargo.toml
bonsai/methods/guest/: Cargo.toml
bonsai/script/: Deploy.s.sol
bonsai/server/: package.json
bonsai/server/src/: index.js
contracts/: hardhat.config.ts  package.json
contracts/contracts/: CCIPReceiverTest.sol  CCIPSenderTest.sol  ERC20Factory.sol  GitHubFundManager.sol  MyERC20.sol  Rist0Zero.sol
contracts/scripts/: deploy-erc20.ts  deploy-receiver-base-sepolia.ts  deploy-risc0-test.ts  deploy-sender-sepolia.ts  deploy.ts  emit-event-test.ts  ipfs-upload-test.ts  mint-test-tokens-in-sepolia.ts  request-chainlink-function.ts  send-token-to-ccip.ts
graph/: networks.json  package.json  subgraph.yaml
graph/abis/: GitHubFundManager.json
graph/src/: git-hub-fund-manager.ts
graph/tests/: git-hub-fund-manager-utils.ts  git-hub-fund-manager.test.ts
ui/: package-lock.json  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  lifecycle.tsx  page.tsx  providers.tsx
ui/app/api/github/: route.ts
ui/app/profile/: IssueZKPassButton.tsx  page.tsx
ui/app/repository/: page.tsx
ui/app/support/: page.tsx
ui/components/GitHubConnectButton/: index.tsx
ui/components/RepositoryListItem/: index.module.css  index.tsx
ui/constants/: abi.json
ui/hooks/: useGenerateGitHubAccountProof.ts  useGitHubAccessToken.ts  useGitHubAccount.ts  useGitHubContributors.tsx  useGitHubRepository.tsx
