[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
bytemuck = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
envy = "0.4.2"
ethers = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true }
serde.workspace = true
serde_derive = "1.0.197"
serde_json = "1.0.114"
axum = "0.7.4"
tower-http = { version = "=0.5.2", features = ["cors"]}
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }